@startuml

title __POSITIONS's Class Diagram__\n

  package Positions {
    class BoardCordinates {
        - x : int
        - y : int
        + BoardCordinates()
        + getX()
        + setX()
        + getY()
        + setY()
    }
  }
  

  package Positions {
    class Change {
        - type : char
        + Change()
        + getType()
    }
  }
  

  package Positions {
    class Direction {
        + Direction()
        {static} + getRandomDirection()
    }
  }
  

  package Positions {
    class Position {
        + Position()
        {static} + getRandomPosition()
    }
  }
  

  Change -up-|> BoardCordinates
  Direction -up-|> BoardCordinates
  Position -up-|> BoardCordinates


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
